tests/idris2/error/error024/Error1.idr
foo : Int -> IO Int
foo x = pure x

main : IO ()
main = putStrLn !(foo 10)
